# apb86_S2

./: README.md  RJMCMC.py  draft.ipynb  mcmc_chains.npy  pyproject.toml  test.ipynb
apb86_s2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: api-reference.md  architecture.md  testing.md
tests/: test_change_point.py  test_constant_rate.py  test_data.py  test_priors.py  test_rjmcmc.py  test_stats.py
varateMC/: __init__.py  change_point.py  constant_rate.py  data.py  priors.py  rjmcmc.py  stats.py
